--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -31,7 +31,7 @@
 .container {
   position: relative;
   /*width: 100%;*/
-  max-width: 90%;
+  max-width: 1300px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box; }
@@ -125,7 +125,9 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
+  color: #222;
+  margin: 0;
+}
 
 
 /* Typography
