--- a/css/global-bites.css
+++ b/css/global-bites.css
@@ -1,21 +1,23 @@
 /* Navigation styles */
 
 header nav {
-      padding:3em 0;
-
+      padding:30px 10px;
+      background: #FBFBF8;
 }      
 
 header nav ul {
-	display: inline;
 	text-align: right;
 	list-style-type: none;	
+}
+
+header nav li {
+	display: inline;
 }
 
 header nav a {
 	color: #CE6426;
     font-size: 20px;
     text-decoration: none;
-    float:right;
     margin:0 15px;
     padding-bottom: 20px;
 }
