--- a/css/global-bites.css
+++ b/css/global-bites.css
@@ -34,14 +34,14 @@ header nav a:hover {
     background-position: top center;
     background size: cover;
     padding: 22em 4em 4em 4em;
-    text-align: center;
     display: block;
+    text-align: center;
 }
 
 .infographic h2 {
     font-size: 24px;
     color: #275f43;
-    margin: 60px;
+    margin-top: 60px;
     text-align: center;
     
 }
@@ -49,10 +49,13 @@ header nav a:hover {
     font-size: 18px;
     color: #3a956a;
     line-height: 22px;
-    padding: 20px;
+    margin-top: 15px;
+    text-align: center;
 }
+
 .infographic img {
-    margin: 10px;
+    margin-top: 5px;
+    
 
 }
 
@@ -64,6 +67,8 @@ header nav a:hover {
     background: #3A956A;
     border: 2px solid #359668;
     box-shadow: 0px 2px 0px 0px #275f43;
+    text-align: center;
+    margin-top: 5px;
 }
 
 .button a {
