--- a/css/global-bites.css
+++ b/css/global-bites.css
@@ -24,8 +24,55 @@ header nav a {
 
 header nav a:hover {
 	color: #CE6426;
+}
+/* END of Navigation styles */
+
+
+/* Hero section */
+
+.hero {
+    background: #FBFBF8; 
+}
+
+.logo {
+    position: relative;
+    right: 100px;
+    bottom: 15px;
+    
+}
+.button1 {
+    background: #fff;
+    border-radius: 4px;
+    border: 1px solid #CE6426;
+    box-shadow: 0px 2px 0px 0px #B74604;
+    text-decoration: none;
+    padding: 10px 200px 10px 5px;
+    position: relative;
+    top: 25px;
+    right: 100px;
+    margin-left: 50px;
+       
 
 }
+
+     
+.button2 {
+    background: #CE6426;
+    border-radius: 4px;
+    box-shadow: 0px 2px 0px 0px #B74604;
+    text-decoration: none;
+    padding: 10px 100px 10px 5px;
+    position: relative;
+    top: 25px;
+    left: 100px;
+    margin-left: -100px;   
+}
+
+
+
+/* END of Hero section */
+
+/* 3rd section of people eating */
 
 .download-app {
     background-image: url(../images/People_eating.png);
@@ -36,8 +83,6 @@ header nav a:hover {
     background-size: cover;
     text-align: center;
     padding: 4em 0;
-   
-
 }   
 
 .buttonpeople {
@@ -55,10 +100,9 @@ header nav a:hover {
 
 }
 
-.buttonpeople a {
-    font-size: 18px;
 
-}
+
+
 
 .download-app p{
     font-size: 18px;
@@ -87,6 +131,9 @@ header nav a:hover {
     
 
 }
+/* END of 3rd section of people eating */
+
+/* Infographic section */
 
 .infographic {
     background-image: url(../images/cityscape_icons.png);
@@ -146,6 +193,7 @@ header nav a:hover {
 .button a {
     font-size: 16px;
 }
+/* END of Infographic section */ 
 
 /* Footer styles */
 
