--- a/css/global-bites.css
+++ b/css/global-bites.css
@@ -1,3 +1,13 @@
+/* Typography */
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3 {
+    font-family: 'Roboto Slab', serif;
+}
+
 /* Navigation styles */
 
 header nav {
@@ -31,14 +41,14 @@ header nav a:hover {
 /* Hero section */
 
 .hero {
-    background: #FBFBF8; 
+    background: #FBFBF8;
 }
 
 .logo {
     position: relative;
     right: 100px;
     bottom: 15px;
-    
+
 }
 .button1 {
     background: #fff;
@@ -51,11 +61,11 @@ header nav a:hover {
     top: 25px;
     right: 100px;
     margin-left: 50px;
-       
+
 
 }
 
-     
+
 .button2 {
     background: #CE6426;
     border-radius: 4px;
@@ -65,7 +75,11 @@ header nav a:hover {
     position: relative;
     top: 25px;
     left: 100px;
-    margin-left: -100px;   
+    margin-left: -100px;
+}
+
+.button.button-primary {
+    background-color: orange;
 }
 
 
@@ -79,11 +93,11 @@ header nav a:hover {
     width: 100%;
     height: 435px;
     background-repeat: no-repeat;
-    background-position: top center; 
+    background-position: top center;
     background-size: cover;
     text-align: center;
     padding: 4em 0;
-}   
+}
 
 .buttonpeople {
     background: #CE6426;
@@ -116,19 +130,19 @@ header nav a:hover {
     bottom: -5px;
 }
 
-.phone  {  
+.phone  {
     position: relative;
     right: 100px;
     top: 100px;
     padding: 100px;
- 
+
 }
 
 .apps {
     position: relative;
     bottom: -280px;
     right: 50px;
-    
+
 
 }
 /* END of 3rd section of people eating */
@@ -149,9 +163,9 @@ header nav a:hover {
 @media (max-width: 1000px) {
     .infographic {
      background-image: none;
-     padding: 4em 4em 4em 4em;  
+     padding: 4em 4em 4em 4em;
     }
-    
+
 }
 
 .infographic h2 {
@@ -193,7 +207,7 @@ header nav a:hover {
 .button a {
     font-size: 16px;
 }
-/* END of Infographic section */ 
+/* END of Infographic section */
 
 /* Footer styles */
 
