--- a/css/global-bites.css
+++ b/css/global-bites.css
@@ -1,11 +1,11 @@
 /* Typography */
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 h1, h2, h3 {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Libre Baskerville', serif;
 }
 
 /* Navigation styles */
@@ -42,44 +42,55 @@ header nav a:hover {
 
 .hero {
     background: #FBFBF8;
+
 }
+
+.line {
+    position: relative;
+    right: 220px;
+    bottom: 16px;
+
+}
+
+.truck {
+    position: relative;
+    left: 23px;
+    top: 90px;
+}
+
 
 .logo {
     position: relative;
     right: 100px;
-    bottom: 15px;
-
-}
-.button1 {
-    background: #fff;
-    border-radius: 4px;
-    border: 1px solid #CE6426;
-    box-shadow: 0px 2px 0px 0px #B74604;
-    text-decoration: none;
-    padding: 10px 200px 10px 5px;
-    position: relative;
-    top: 25px;
-    right: 100px;
-    margin-left: 50px;
-
+    bottom: 30px;
 
 }
 
 
-.button2 {
-    background: #CE6426;
-    border-radius: 4px;
-    box-shadow: 0px 2px 0px 0px #B74604;
-    text-decoration: none;
-    padding: 10px 100px 10px 5px;
-    position: relative;
-    top: 25px;
-    left: 100px;
-    margin-left: -100px;
-}
 
 .button.button-primary {
-    background-color: orange;
+    background: #CE6426;
+    border: 1px solid #CE6426;
+    border-radius: 4px;
+    color: #fff;
+    box-shadow: 0px 2px 0px 0px #B74604;
+    text-decoration: none;
+    margin-right: 20px;
+
+}
+
+.hero h1 {
+    font-size: 60px;
+    font-weight: bold;
+    color: #CE6426;
+    margin-bottom: -5px;
+
+}
+
+.hero p {
+    font-size: 22px;
+    color: #CE6426;
+
 }
 
 
@@ -113,10 +124,6 @@ header nav a:hover {
     right: 10px;
 
 }
-
-
-
-
 
 .download-app p{
     font-size: 18px;
