--- a/css/global-bites.css
+++ b/css/global-bites.css
@@ -66,8 +66,6 @@ header nav a:hover {
 
 }
 
-
-
 .button.button-primary {
     background: #CE6426;
     border: 1px solid #CE6426;
@@ -93,9 +91,59 @@ header nav a:hover {
 
 }
 
-
-
 /* END of Hero section */
+
+/* 2nd section of food */
+.photos {
+    background-image: url(../images/halftone_globe.png);
+    background-color: #EEF1E4;
+    width: 100%;
+    height: 500px;
+}
+.left {
+    position: relative;
+    right: 45px;
+    top: 192px;
+}
+
+.right {
+    position: relative;
+    left: 15px;
+    top: 192px;
+}
+
+
+
+.photos p {
+    color: #B01B08;
+    text-align: center;
+    position: relative;
+    top: 200px;
+    right: 10px;
+}
+
+#textright {
+    color: #B01B08;
+    text-align: center;
+    position: relative;
+    top: 200px;
+    left: 55px;
+}
+.jerk {
+    position: relative;
+    right: 45px;
+    top: 15px;
+}
+
+/* END of 2nd section of food */
+
+
+
+
+
+
+
+
 
 /* 3rd section of people eating */
 
