--- a/css/global-bites.css
+++ b/css/global-bites.css
@@ -71,13 +71,7 @@ header nav a:hover {
 
 }
 
-@media (max-width: 450px) {
-    .logo {
-    display: block;
-    padding: 2em 0 2em;
-    }
 
-}
 
 .button.button-primary {
     background: #CE6426;
@@ -115,13 +109,13 @@ header nav a:hover {
     width: 100%;
     height: 500px;
 }
-.left {
+.leftfood {
     position: relative;
     right: 55px;
     top: 192px;
 }
 
-.right {
+.rightfood {
     position: relative;
     left: 15px;
     top: 192px;
